# page2vec

./: .gitignore  LICENSE  MANIFEST.in  PACKAGE_SETUP_SUMMARY.md  Pipfile  README.md  chromadb_helper.py  know2vec.py  milvus_helper.py  page2vec.py  pinecone_helper.py  pyproject.toml  requirements.txt  setup.py  test_milvus.db  test_pinecone_helper.py
page2vec/: __init__.py  __main__.py  core.py
page2vec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
page2vec/database_helpers/: __init__.py  chromadb_helper.py
tests/: __init__.py  test_import.py
