[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "page2vec"
version = "0.1.0"
description = "Convert knowledge base websites into vectors for vector databases"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yasu"},
]
keywords = [
    "vector database",
    "embeddings",
    "web scraping",
    "knowledge base",
    "pinecone",
    "chromadb",
    "milvus"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "browser-use>=0.3.0",
    "pinecone>=2.2.0",
    "chromadb>=1.1.0",
    "pymilvus>=2.2.0",
    "milvus-model",
    "nest-asyncio>=1.6.0",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
page2vec = "page2vec.core:main"

[project.urls]
Homepage = "https://github.com/yourusername/page2vec"
Repository = "https://github.com/yourusername/page2vec.git"
Issues = "https://github.com/yourusername/page2vec/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["page2vec*"]

[tool.setuptools.package-data]
page2vec = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
